--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Me</h2>
-          <p class="text-white-50">I believe everything has the right time and place.  This is the right time for me 
-            to make a change and branch out into the developement world. I can be serious and focused in a
-            board meeting, just as easily, I can relax with friends and laugh at a joke.  Mostly self taught, I am a
-            veteran of the financial industry with nearly 15 years of experience.  I've held positions in sales, 
-            management, analyst, underwriter, owner, and soon to be Web Developer.  I'm very excited about the endless 
-            possibilities of web developement and the implemenetation of various solutions.  I am also a busy individual 
-            who always looks for improvement in some way or another. Currently, I am attending a coding bootcamp at 
-            Northwestern University and look forward to graduation in April.  I have pursued my goals with great passion
-            and urgency and continue to do so.</p>
+          <p class="text-white-50">Welcome to my Portfolio Page.  I recently changed careers into software development.  
+            I enjoy the challenge of creating solutions to tasks or problems encountered.  Along with my new coding skills, 
+            I bring with me seven plus years financial industry expertise and seven plus years of management competency. 
+            I've held positions in sales, management, analyst, underwriter, owner, and soon to be Software Developer.  I'm very 
+            excited about the endless possibilities of web development and the implementation of various solutions and technologies.
+            I recently graduated from Northwestern University web development coding bootcamp.  I have pursued my goals with 
+            great passion and urgency while continuing self improvement.</p>
         </div>
       </div>
     </div>
